# CapstoneROS

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  CTestTestfile.cmake  Drive Report.txt  Makefile  README.md  README.md~  TODO.txt  TODO.txt~  cmake_install.cmake  package.xml  package.xml~  rosserialCommand
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  robot-msg-extras.cmake.develspace.in  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  robot-msg-extras.cmake  robot.pc  robotConfig.cmake
cmake/: robot-genmsg-context.py  robot-genmsg.cmake
devel/: .catkin  .rosinstall  setup.sh
gtest/: CTestTestfile.cmake  Makefile
msg/: BeaconRequest.msg  BeaconRequest.msg~  BeaconResponse.msg  BeaconResponse.msg~  CameraRequest.msg  CameraResponse.msg  CameraResponse.msg~  Commands.msg~  LeftMotor.msg  Motors.msg  RightMotor.msg  SampleRequest.msg  SampleRequest.msg~  SampleResponse.msg  TargetRequest.msg  TargetResponse.msg
src/: #beacon_return.cpp#  #mastermind.cpp#  #nav.cpp#  #nav_camera.cpp#  #phidget_encoder.cpp#  .nav.cpp.swn  .nav.cpp.swo  .nav.cpp.swp  based_motor_control (copy).cpp  based_motor_control.cpp  based_motor_control.cpp~  basic_motor_control.cpp  basic_motor_control.cpp~  beacon.cpp  beacon.cpp~  beacon_return.cpp  beacon_return.cpp~  encoder  fake_arduino.cpp  fake_arduino.cpp~  hello_world_node  kaeli_stepper.cpp  mastermind.cpp  mastermind.cpp~  nav.cpp  nav_camera.cpp  nav_oracle  navstepper.cpp  navstepper.cpp~  phidget_encoder.cpp  steppertest.cpp  steppertest.cpp~  vision_sim.cpp  vision_sim.cpp~
src/Stepper/: arduino-serial  arduino-serial-lib.c  arduino-serial-lib.h  arduino-serial.c  steppertest.cpp
src/vision/: #functions.cpp#  #nav_sim.cpp#  .~lock.Timing Tests.ods#  ROS_heatmap.py  ROS_heatmap.py~  Timing Tests.ods  a.out  armcam.cpp  armcam.cpp~  beacon.cpp  beacon.cpp~  beacon.h  beacon.h~  beacon_pics.cpp  beacon_pics.cpp~  beacon_test.cpp  beacon_test.cpp~  beacon_timer.cpp  beacon_timer.cpp~  bestmodel.json  blob.cpp  blob.cpp~  blob.h  blob.h~  blob_heatmap.cpp  blob_heatmap.cpp~  blob_heatmap_edit.cpp  blob_heatmap_edit.cpp~  blob_multipic.cpp  blob_multipic.cpp~  blob_test.cpp  blob_test.cpp~  functions.cpp  functions.cpp~  functions.h  functions.h~  functions_test.cpp  main  main.cpp  main.cpp~  (+10 more)
srv/: EncoderRequest.srv
(+70 files in other folders)
